--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -11,11 +11,12 @@ main {
 body {
   background-color: $DarkBlue;
   font-family: $font-family;
-  font-size: 0.75rem;
+  font-size: 0.5rem;
   color: $LightCyan;
 }
 a {
   text-decoration: none;
+  color: $GrayishBlue;
 }
 h1 {
   font-size: 0.75rem;
