--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,3 +1,10 @@
 .footer {
   margin-bottom: 20px;
+  color: $DarkGrayishBlue;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    font-size: 0.75rem;
+  }
 }
