--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -21,7 +21,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url("/assets/images/icon-dice.svg");
+    background-image: url("./assets/images/icon-dice.svg");
     background-position: center center;
     background-repeat: no-repeat;
   }
