--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1 {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url("/assets/images/icon-dice.svg");
+  background-image: url("./assets/images/icon-dice.svg");
   background-position: center center;
   background-repeat: no-repeat;
 }
